start.fpo: Switch to Fedora Magzine, readability fixes, reorder links

--- a/start.fedoraproject.org/static/css/start.fedora.css
+++ b/start.fedoraproject.org/static/css/start.fedora.css
@@ -37,11 +37,11 @@ h2.start {
 }
 
 #announcement {
-    width: 240px;
+    width: 235px;
 }
 
 #planet {
-    width: 360px;
+    width: 395px;
 }
 
 #links {
@@ -55,7 +55,7 @@ h2.start {
 }
 
 .container_12, .container_16 {
-    width: 995px !important;
+    width: 1000px !important;
 }
 
 .container_12 #planet {
@@ -171,10 +171,19 @@ h4 {
 }
 
 .feed, .planet_feed {
-  line-height:1.2em;
-  margin-bottom:.3em;
+  line-height:1.3em;
+  margin-bottom:.4em;
   font-size:1.2em;
+  margin-left: 10px;
 }
 
-span.post_author {font-size:.9em}
+#planet ul {
+  list-style: none;
+}
+
+span.post_author, span.post_date {
+  font-size:.9em;
+  color: gray;
+
+}
 
